# adventctf_otw_day2

./: Cargo.toml  README.md  build.rs
protos/: AdventMessages.proto
src/: lib.rs
src/protos/: AdventMessages.rs  mod.rs
