[package]
name = "day2"
version = "0.1.0"
authors = ["majin42 <melvil.guillaume@synacktiv.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
hexdump = "0.1.0"
protobuf = "2.8.1"
indicatif = "0.13.0"
log = "0.4"
fern = "0.5"
chrono = "0.4"
byteorder = "1.3.2"
clap = "2.33.0"

[build-dependencies]
protoc-rust = "2.0"
